sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/stignore-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: manager
    app.kubernetes.io/name: stignore-manager
  name: stignore-manager
  namespace: stignore-manager

spec:
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: manager
    app.kubernetes.io/name: stignore-manager
  type: ClusterIP
