sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/stignore-manager/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: manager
    app.kubernetes.io/name: stignore-manager
  name: stignore-manager
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    external-dns.kubernetes.io/hostname: stignore-manager.indigo.dalmura.cloud
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: true
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik@kubernetescrd
spec:
  ingressClassName: ingress-private
  tls:
    - hosts:
        - stignore-manager.indigo.dalmura.cloud
      secretName: stignore-manager-cert
  rules:
  - host: stignore-manager.indigo.dalmura.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stignore-manager
            port:
              number: 8000
